2023-08-07T16:22:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5787532032 # 677
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
* notice: last 14d: unq all: 4 16
* notice: prev accum: outdated-unq outdated-all / unq all: 209 452 / 219 469
* notice: next accum: outdated-unq outdated-all / unq all: 210 453 / 219 469
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-24] / []

2023-08-07T01:34:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5780015824 # 675
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
* notice: last 14d: unq all: 4 17
* notice: prev accum: outdated-unq outdated-all / unq all: 208 450 / 219 469
* notice: next accum: outdated-unq outdated-all / unq all: 209 452 / 219 469
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-23] / []

2023-08-06T01:22:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5773842417 # 672
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-06
* notice: last 14d: unq all: 4 19
* notice: prev accum: outdated-unq outdated-all / unq all: 207 448 / 219 469
* notice: next accum: outdated-unq outdated-all / unq all: 208 450 / 219 469
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-22] / []

2023-08-05T01:25:07Z: