@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-07T16:22:58Z",
-  "count_outdated" : 453,
-  "uniques_outdated" : 210,
+  "timestamp" : "2023-08-08T16:23:50Z",
+  "count_outdated" : 455,
+  "uniques_outdated" : 211,
   "count" : 469,
   "uniques" : 219,
   "clones" : [
-    {
-      "timestamp": "2023-07-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-26T00:00:00Z",
       "count": 2,
