@@ -1,12 +1,7 @@
 {
-  "count": 16,
+  "count": 14,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2023-07-25T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-26T00:00:00Z",
       "count": 2,
