@@ -1,3 +1,12 @@
+2023-08-08T16:23:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5799478552 # 680
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-08
+* notice: last 14d: unq all: 4 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 210 453 / 219 469
+* notice: next accum: outdated-unq outdated-all / unq all: 211 455 / 219 469
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-25] / []
+
 2023-08-07T16:22:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5787532032 # 677
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
